[package]
name = "curl-easybuilder"
version = "0.1.1-pre"
authors = ["lettenj61 <lettenj61@users.noreply.github.com>"]
description = "Tiny crate to introduce builder for curl-rust Easy API."
license = "MIT"
repository = "https://github.com/lettenj61/curl-rust-easybuilder"

[dependencies]
curl = "0.4"
error-chain = "0.7.2"
